Starting signal for refactoring the wizard (again)

--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -25,18 +25,18 @@
                                               Class="field-md"
                                               TextChanged="AutoUpdateAbbreviation"
                                               Required="true"
-                                              RequiredError="First name is required" />
+                                              RequiredError="Last name is required" />
                             </MudStack>
                             <MudTextField T="string"
                                           @bind-Value="Model.Abbreviation"
                                           Label="Abbreviation"
                                           Class="field-sm"
-                                          Required="true"
-                                          RequiredError="Field is required" />
+                                          Required="true" />
                             <MudDatePicker @bind-Date="@dateSetter"
                                            Editable="true"
                                            Label="Date of Birth"
-                                           Class="field-md" />
+                                           Class="field-md"
+                                           Required="true" />
                             <MudCountrySelect @bind-Value="Model.Country"
                                               Class="field-md" />
                             <MudTextField T="string"
