--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -58,7 +58,7 @@
                         <MudPaper>
                             @if (!_loading)
                             {
-                                <MudForm Model="Model.SeasonEngines" @ref="_engineForm">
+                                <MudForm @ref="_engineForm">
                                     <MudTable T="EditSeasonEngineModel" Items="@Model.SeasonEngines" Hover="true">
                                         <HeaderContent>
                                             <MudTh>Name</MudTh>
@@ -128,7 +128,7 @@
             <MudStep Title="Modify teams" Icon="@IconCollection.Car">
                 <ChildContent>
                     <MudContainer MaxWidth="MaxWidth.ExtraLarge">
-                        <MudForm Model="@Model.SeasonTeams" @ref="_teamForm">
+                        <MudForm @ref="_teamForm">
                             <MudPaper>
                                 @if (!_loading)
                                 {
@@ -192,10 +192,10 @@
                                                 <MudTextField @bind-Value="@context.Principal" Required />
                                             </MudTd>
                                             <MudTd DataLabel="Colour">
-                                                <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" />
+                                                <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" Required />
                                             </MudTd>
                                             <MudTd DataLabel="Accent">
-                                                <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" />
+                                                <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" Required />
                                             </MudTd>
                                             <MudTd DataLabel="Base">
                                                 <MudNumericField @bind-Value="@context.BaseValue" />
@@ -581,11 +581,7 @@
         Season = await SeasonService.GetSeasonById(SeasonId);
         PreviousSeason = await SeasonService.FindRecentClosedSeason(Season.LeagueId);
 
-        // You might want to add these bad boys to the individual step actions instead of doing it all at once
-        // Retrieve the existing base engines
         engines = await EngineService.GetEngines();
-        //teams = await TeamService.GetTeams();
-        //drivers = await DriverService.GetDrivers();
         manufacturers = await ManufacturerService.GetManufacturers();
 
         _loading = false;
@@ -813,6 +809,6 @@
         if (manufacturer != null)
             return manufacturer.Name;
 
-        return "None";
+        return "Unknown";
     }
 }
