--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
@@ -1,5 +1,33 @@
-﻿<h3>AddTeams</h3>
+﻿<MudStep Title="Participating teams" Icon="@IconCollection.Car">
+    <ChildContent>
+        <MudContainer MaxWidth="MaxWidth.Medium">
+            <MudPaper>
+                <MudTable T="Team" Items="@Teams" @bind-SelectedItems="@Model.BaseTeams" MultiSelection="true" Dense="true" Hover="true">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h5">Available teams</MudText>
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>Name</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd DataLabel="Name">
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText>@context.Name</MudText>
+                                <MudSpacer />
+                                <CountryFlag Code="@context.Country" />
+                            </MudStack>
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudPaper>
+        </MudContainer>
+    </ChildContent>
+</MudStep>
 
 @code {
+    [CascadingParameter]
+    public AddEntrantsModel Model { get; set; }
 
+    [Parameter, EditorRequired]
+    public List<Team> Teams { get; set; }
 }
