--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.Extensions.Options
 @using Microsoft.JSInterop
 @using MudBlazor
+@using MudExtensions
 @using SimTECH
 @using SimTECH.Components
 @using SimTECH.Data.EditModels
