--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -3,11 +3,20 @@
 @inject IDialogService DialogService
 
 <MudContainer MaxWidth="MaxWidth.Large">
-    <MudDataGrid T="Incident" Items="@IncidentData">
+    <MudPaper MinHeight="60px" Width="100%">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h4">Incidents</MudText>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="Incident" Items="@IncidentData" Dense="true">
         <ToolBarContent>
-            <MudText Typo="Typo.h4">Incident</MudText>
+            <MudChipSet>
+                <MudChip Color="Color.Secondary">Temp</MudChip>
+                <MudChip Color="Color.Secondary">Temp</MudChip>
+                <MudChip Color="Color.Secondary">Temp</MudChip>
+            </MudChipSet>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </ToolBarContent>
         <Columns>
             <PropertyColumn Property="e => e!.Name" />
